--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "manifest_version": 2,
   "name": "Netflix 1080p",
   "description": "Forces 1080p playback for Netflix.",
-  "version": "1.4.9",
+  "version": "1.5",
   "author": "truedread",
   "content_scripts": [{
     "matches": [
       "*://assets.nflxext.com/*/ffe/player/html/*",
       "*://www.assets.nflxext.com/*/ffe/player/html/*",
-      "*://netflix.com/watch/*",
-      "*://www.netflix.com/watch/*"
+      "*://netflix.com/*",
+      "*://www.netflix.com/*"
     ],
     "js": ["content_script.js"],
     "run_at": "document_start"
@@ -26,7 +26,7 @@
     "webRequestBlocking",
     "*://assets.nflxext.com/*/ffe/player/html/*",
     "*://www.assets.nflxext.com/*/ffe/player/html/*",
-    "*://netflix.com/watch/*",
-    "*://www.netflix.com/watch/*"
+    "*://netflix.com/*",
+    "*://www.netflix.com/*"
   ]
 }
