--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,15 @@
   "manifest_version": 2,
   "name": "Netflix 1080p",
   "description": "Forces 1080p playback for Netflix.",
-  "version": "1.5",
+  "version": "1.6",
   "author": "truedread",
+  "browser_action": {
+    "default_icon": "img/icon128.png"
+  },
+  "icons": {
+    "48": "img/icon48.png",
+    "128": "img/icon128.png"
+  },
   "content_scripts": [{
     "matches": [
       "*://assets.nflxext.com/*/ffe/player/html/*",
