--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Netflix 1080p",
   "description": "Forces 1080p and 5.1 playback for Netflix.",
-  "version": "1.12",
+  "version": "1.13",
   "author": "truedread",
   "browser_action": {
     "default_icon": "img/icon128.png"
@@ -24,11 +24,16 @@
   "background": {
     "scripts": ["background.js"]
   },
+  "options_ui": {
+    "page": "pages/options.html",
+    "open_in_tab": false
+  },
   "web_accessible_resources": [
     "get_manifest.js",
-    "cadmium-playercore-6.0011.474.011-1080p.js"
+    "cadmium-playercore-6.0011.853.011-1080p.js"
   ],
   "permissions": [
+    "storage",
     "webRequest",
     "webRequestBlocking",
     "*://assets.nflxext.com/*/ffe/player/html/*",
