activate for all frames

--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
       "*://netflix.com/*",
       "*://www.netflix.com/*"
     ],
+    "all_frames": true,
     "js": ["content_script.js"],
     "run_at": "document_start"
   }],
