Add a more complete MSL client updated for the new MSL API in order to allow for 1080p playback

--- a/manifest.json
+++ b/manifest.json
@@ -30,8 +30,8 @@
     "open_in_tab": false
   },
   "web_accessible_resources": [
-    "get_manifest.js",
-    "cadmium-playercore-6.0011.853.011-1080p.js"
+    "msl_client.js",
+    "cadmium-playercore-6.0015.328.011-1080p.js"
   ],
   "permissions": [
     "storage",
