--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Netflix 1080p",
   "description": "Forces 1080p and 5.1 playback for Netflix.",
-  "version": "1.19",
+  "version": "1.20",
   "author": "truedread",
   "browser_action": {
     "default_icon": "img/icon128.png"
@@ -30,9 +30,9 @@
     "open_in_tab": false
   },
   "web_accessible_resources": [
-    "msl_client.js",
+    // "msl_client.js",
     "netflix_max_bitrate.js",
-    "cadmium-playercore-6.0015.328.011-1080p.js"
+    "cadmium-playercore-6.0031.174.911-1080p.js"
   ],
   "permissions": [
     "storage",
